--- a/styles/main.css
+++ b/styles/main.css
@@ -68,7 +68,7 @@ form{
         max-height: 500px;
         color: black;
         max-height: 500px;
-        overflow-x: scroll;
+        overflow-y: hidden;
         overflow-x:hidden;
         margin: 10px;
 }
@@ -224,14 +224,14 @@ input[type=checkbox],input[type=radio]
 
 /*---------- SCROLLBAR-------*/
 
-::-webkit-scrollbar {
+#cms-content::-webkit-scrollbar {
     width: .7em;
 }
 
-::-webkit-scrollbar-track {
+#cms-content::-webkit-scrollbar-track {
 }
 
-::-webkit-scrollbar-thumb {
+#cms-content::-webkit-scrollbar-thumb {
 
     background-color: rgb(248,86,8);/*darkgrey;*/
   border-radius: 10px;
